--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -14,4 +14,5 @@ dbqueue-server = { path = "../server" }
 dbqueue-client = { path = "../client" }
 mio = { git = "https://github.com/reem/mio", branch = "nonblock-read-write-impls" }
 eventual = { git = "https://github.com/carllerche/eventual" }
+uuid = "~0.1"
 
