--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -10,6 +10,6 @@ license = "MIT"
 
 [dependencies]
 rustc-serialize = "~0.3"
-bincode = "~0.2"
+bincode = { git = "https://github.com/reem/bincode", branch = "refbox-enhancements" }
 uuid = "~0.1"
 
