--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,5 +16,5 @@ uuid = "~0.1"
 iobuf = "~5"
 threadpool = "~0.1"
 log = "~0.3"
-comm = { git = "https://github.com/reem/comm", branch = "rustup2" }
+comm = { git = "https://github.com/mahkoh/comm" }
 
